--- a/mfctest/mfctest.vcxproj
+++ b/mfctest/mfctest.vcxproj
@@ -111,7 +111,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -187,40 +187,40 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\An_passnt.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Bishop.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Board.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\King.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Knight.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Pawn.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Piece.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Queen.h" />
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Rook.h" />
+    <ClInclude Include="An_passnt.h" />
+    <ClInclude Include="Bishop.h" />
+    <ClInclude Include="Board.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="King.h" />
+    <ClInclude Include="Knight.h" />
     <ClInclude Include="mfctest.h" />
     <ClInclude Include="mfctestDlg.h" />
+    <ClInclude Include="Pawn.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Piece.h" />
+    <ClInclude Include="Queen.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\An_passnt.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Bishop.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Board.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\King.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Knight.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Pawn.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Piece.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Queen.cpp" />
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Rook.cpp" />
+    <ClCompile Include="An_passnt.cpp" />
+    <ClCompile Include="Bishop.cpp" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="King.cpp" />
+    <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="mfctest.cpp" />
     <ClCompile Include="mfctestDlg.cpp" />
+    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Piece.cpp" />
+    <ClCompile Include="Queen.cpp" />
+    <ClCompile Include="Rook.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mfctest.rc" />
@@ -229,19 +229,19 @@
     <None Include="res\mfctest.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\900px-Chess_Board.png" />
-    <Image Include="..\..\bishop_black.png" />
-    <Image Include="..\..\bishop_white.png" />
-    <Image Include="..\..\king_black.png" />
-    <Image Include="..\..\king_white.png" />
-    <Image Include="..\..\knight_black.png" />
-    <Image Include="..\..\knight_white.png" />
-    <Image Include="..\..\pawn_black.png" />
-    <Image Include="..\..\pawn_white.png" />
-    <Image Include="..\..\queen_black.png" />
-    <Image Include="..\..\queen_white.png" />
-    <Image Include="..\..\rook_black.png" />
-    <Image Include="..\..\rook_white.png" />
+    <Image Include="Pieces\900px-Chess_Board.png" />
+    <Image Include="Pieces\bishop_black.png" />
+    <Image Include="Pieces\bishop_white.png" />
+    <Image Include="Pieces\king_black.png" />
+    <Image Include="Pieces\king_white.png" />
+    <Image Include="Pieces\knight_black.png" />
+    <Image Include="Pieces\knight_white.png" />
+    <Image Include="Pieces\pawn_black.png" />
+    <Image Include="Pieces\pawn_white.png" />
+    <Image Include="Pieces\queen_black.png" />
+    <Image Include="Pieces\queen_white.png" />
+    <Image Include="Pieces\rook_black.png" />
+    <Image Include="Pieces\rook_white.png" />
     <Image Include="res\mfctest.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
