--- a/mfctest/mfctest.vcxproj.filters
+++ b/mfctest/mfctest.vcxproj.filters
@@ -33,31 +33,28 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\An_passnt.h">
+    <ClInclude Include="An_passnt.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Bishop.h">
+    <ClInclude Include="Bishop.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Board.h">
+    <ClInclude Include="Board.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\King.h">
+    <ClInclude Include="King.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Knight.h">
+    <ClInclude Include="Knight.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Pawn.h">
+    <ClInclude Include="Pawn.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Piece.h">
+    <ClInclude Include="Piece.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Queen.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Rook.h">
+    <ClInclude Include="Queen.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -71,31 +68,34 @@
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\An_passnt.cpp">
+    <ClCompile Include="An_passnt.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Bishop.cpp">
+    <ClCompile Include="Bishop.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Board.cpp">
+    <ClCompile Include="Board.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\King.cpp">
+    <ClCompile Include="King.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Knight.cpp">
+    <ClCompile Include="Knight.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Pawn.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Piece.cpp">
+    <ClCompile Include="Pawn.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Queen.cpp">
+    <ClCompile Include="Piece.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Chess_Gna\Chess_Gna\Chess_Gna\Rook.cpp">
+    <ClCompile Include="Queen.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Rook.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,43 +113,43 @@
     <Image Include="res\mfctest.ico">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\900px-Chess_Board.png">
+    <Image Include="Pieces\900px-Chess_Board.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\bishop_black.png">
+    <Image Include="Pieces\bishop_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\bishop_white.png">
+    <Image Include="Pieces\bishop_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\king_black.png">
+    <Image Include="Pieces\king_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\king_white.png">
+    <Image Include="Pieces\king_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\knight_black.png">
+    <Image Include="Pieces\knight_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\knight_white.png">
+    <Image Include="Pieces\knight_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\pawn_black.png">
+    <Image Include="Pieces\pawn_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\pawn_white.png">
+    <Image Include="Pieces\pawn_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\queen_black.png">
+    <Image Include="Pieces\queen_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\queen_white.png">
+    <Image Include="Pieces\queen_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\rook_black.png">
+    <Image Include="Pieces\rook_black.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\rook_white.png">
+    <Image Include="Pieces\rook_white.png">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
