--- a/mfctest/mfctest.vcxproj.filters
+++ b/mfctest/mfctest.vcxproj.filters
@@ -83,9 +83,6 @@
     <ClCompile Include="Knight.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Pawn.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -116,40 +113,40 @@
     <Image Include="Pieces\900px-Chess_Board.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\bishop_black.png">
+    <Image Include="Pieces\Black_BISHOP.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\bishop_white.png">
+    <Image Include="Pieces\White_BISHOP.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\king_black.png">
+    <Image Include="Pieces\Black_KING.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\king_white.png">
+    <Image Include="Pieces\White_KING.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\knight_black.png">
+    <Image Include="Pieces\Black_KNIGHT.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\knight_white.png">
+    <Image Include="Pieces\White_KNIGHT.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\pawn_black.png">
+    <Image Include="Pieces\Black_PAWN.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\pawn_white.png">
+    <Image Include="Pieces\White_PAWN.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\queen_black.png">
+    <Image Include="Pieces\Black_QUEEN.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\queen_white.png">
+    <Image Include="Pieces\White_QUEEN.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\rook_black.png">
+    <Image Include="Pieces\Black_ROOK.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Pieces\rook_white.png">
+    <Image Include="Pieces\White_ROOK.png">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
