--- a/mfctest/mfctest.vcxproj.filters
+++ b/mfctest/mfctest.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Queen.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CPromotionDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mfctest.cpp">
@@ -93,6 +96,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Rook.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CPromotionDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
